changing main navigation style, adding class box,footer style change

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
-    background:#fefefe ;
+    background:#f0efeb;
+    width: 100%;
 }
 h1{
     color:blue;
@@ -17,14 +18,28 @@ h2{
 }
 a{
     color:#7deca2;
+    margin: 3px;
+    
 }
 nav a{color:royalblue;
 }
-.navigation-background {
-    background: #ffccff;
+.main-navigation {
+    background:rgba(47, 189, 146, 1.0);
+    width: 100%;
+    
+    top: 3px;
+
+    position: sticky;
+    padding: 15px;
+    text-align: center;
+
 }
 .footer {
     color:#6633cc;
+    width: 800px;
+    padding:10px 5px 5px 10px;
+    margin: 0 auto;
+
 }
 .turcus-header{
     color:#006666;
@@ -34,4 +49,15 @@ nav a{color:royalblue;
 }
 .red-header{
     color:#cc0000;
+}
+.box {
+    width: 800px;
+    padding:10px 5px 5px 10px;
+    margin: 0 auto;
+
+
+}
+
+.box img {
+    max-width: 100%;
 }
