--- a/style.css
+++ b/style.css
@@ -1,63 +1,81 @@
-body{
-    background:#f0efeb;
-    width: 100%;
+body {
+  background: #f0efeb;
+  width: 100%;
 }
-h1{
-    color:blue;
-}
-h2{
-    color: #1460aa;
-}
+.main {
+    width: 800px;
+    padding: 10px 5px 5px 10px;
+    margin: 0 auto;
+  }
 
-
-.green-header{
-    color:green;
-}
-#top{
-    background:lightcyan;
-}
-a{
-    color:#7deca2;
-    margin: 3px;
-    
-}
-nav a{color:royalblue;
-}
-.main-navigation {
-    background:rgba(47, 189, 146, 1.0);
+  .main-navigation {
+    background: rgba(47, 189, 146, 1);
     width: 100%;
-    
     top: 3px;
-
     position: sticky;
     padding: 15px;
     text-align: center;
+    border-radius: 8px;
+    
+  }
+  .main-navigation__link{
+      display:inline-block;
+      color:crimson;
+      margin: 3px;
+  }
+  
+  
+  .main img {
+    max-width: 100%;
+  }
+  .main__title{
+    background:#b8d8ba;
+    color:#22333b;
+    padding:10px 16px;
+  }
+  .article{
+    background: rgba(196, 196, 108, 0.322);
+    margin-top: 10px;
+    border:1px solid #f4d8cd;
+    padding: 16px;
+  }
+    
+.article__description{
+    color:#ec0868;
 
 }
-.footer {
-    color:#6633cc;
-    width: 800px;
-    padding:10px 5px 5px 10px;
-    margin: 0 auto;
-
-}
-.turcus-header{
-    color:#006666;
-}
-.background{
-    background:	#dedede;
-}
-.red-header{
-    color:#cc0000;
-}
-.box {
-    width: 800px;
-    padding:10px 5px 5px 10px;
-    margin: 0 auto;
-
-
-}
-
-.box img {
+.article__img{
     max-width: 100%;
 }
+.article__title{
+    display: inline-block;
+    color:darkblue;
+    
+
+    
+}
+.article__title--less-important{
+    color:#eb468b;
+
+}
+
+
+
+
+
+
+
+nav a {
+  color: royalblue;
+}
+
+
+
+.footer {
+  color: #6633cc;
+  width: 800px;
+  padding: 10px 5px 5px 10px;
+  margin: 0 auto;
+}
+
+
