--- a/css/style.css
+++ b/css/style.css
@@ -7,51 +7,54 @@ html {
   box-sizing: inherit;
 }
 body {
-  
   min-height: 100vh;
-  background-color: #FF3CAC;
-  background-image: linear-gradient(225deg, #FF3CAC 0%, #784BA0 50%, #2B86C5 100%);
+  background-color: #ff3cac;
+  background-image: linear-gradient(
+    225deg,
+    #ff3cac 0%,
+    #784ba0 50%,
+    #2b86c5 100%
+  );
 }
 .main {
-  width: 800px;
-  padding: 10px 5px 5px 10px;
-  margin: 0 auto;
-  display:grid;
-  column-gap: 16px;
-  grid-template-columns: 300px 1fr;
-  grid-template-areas: 
-  "main__title main__title"
-  "main aside";
+  max-width: 1000px;
+  margin: 60px auto 0;
   
-
 }
 
 .main-navigation {
-  background: rgba(211, 224, 220, 0.432);
-  width: 100%;
-  top:3px;
-  position: sticky;
-  padding: 15px;
+  
+  padding: 16px;
   border-radius: 8px;
-  font-size: 20px;
-  font-weight:bold;
-  display:flex;
-  flex-direction:row;
-  justify-content: space-around;
+  font-weight: bold;
+  display:none;
+  
+  
+
+
+
 
 }
 .main-navigation__link {
-
   color: crimson;
-  margin: 3px;
-  padding: 5px 20px;
+  display: block;
+  margin: 0 0 16px;
   
-
+  
+  
+  /* padding: 5px 20px; */
 }
-.main-navigation__wrapper{
-  display:inline;
+.main-navigation--open{
+display: block;
 }
-
+.main-navigation__wrapper {
+  display: block;
+  min-height: 60px;
+  position:fixed;
+  top:0;
+  width: 100%;
+  background: rgba(211, 224, 220, 0.719);
+}
 
 .article-list__picture {
   max-width: 100%;
@@ -75,25 +78,21 @@ body {
 .article__description {
   color: #ec0868;
 }
-.articles-list{
-
+.articles-list {
   grid-area: main;
-
 }
- .articles-list--grid{
-   grid-area: aside;
+.articles-list--grid {
+  grid-area: aside;
+}
 
- } 
-
-.article__link{
+.article__link {
   color: inherit;
 }
 
 .article__title {
-  
   color: darkblue;
 }
-.articles-list__title{
+.articles-list__title {
   color: darkblue;
 }
 .article__title--grid-1 {
@@ -110,10 +109,46 @@ nav a {
 
 .footer {
   color: #e1daee;
-  width: 800px;
+  max-width: 800px;
   padding: 10px 5px 5px 10px;
   margin: 0 auto;
 }
 .footer__link {
-color:inherit;
+  color: inherit;
+}
+.hamburger{
+  position:absolute;
+  top:20px;
+  right:16px;
+  border:none;
+  background: none;
+}
+@media screen and (min-width: 768px) {
+  .hamburger {
+    display:none;
+  }
+  .main {
+    max-width: 1000px;
+    padding: 10px 5px 5px 10px;
+    margin: 60px auto 0;
+    display: grid;
+    column-gap: 16px;
+    grid-template-columns: 300px 1fr;
+    grid-template-areas:
+      "main__title main__title"
+      "main aside";
+  }
+  .main-navigation {
+   
+    width: 100%;
+    top: 3px;
+    position: sticky;
+    padding: 15px;
+    border-radius: 8px;
+    font-size: 16px;
+    font-weight: bold;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
 }
